objects/ffr__InquiryTemplateCommonName__c.object
<CustomObject>
    <description>Stores the overriding common names for the template.</description>
    <fields>
        <fullName>ffr__CommonName__c</fullName>
        <label>Common Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffr__DataviewField__c</fullName>
        <label>Dataview Field</label>
        <referenceTo>ffr__DataViewField__c</referenceTo>
        <relationshipLabel>Action View Template Common Names</relationshipLabel>
        <relationshipName>InquiryTemplateCommonNames</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffr__InquiryTemplate__c</fullName>
        <label>Action View Template</label>
        <referenceTo>ffr__InquiryTemplate__c</referenceTo>
        <relationshipLabel>Action View Template Common Names</relationshipLabel>
        <relationshipName>InquiryTemplateCommonNames</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Action View Template Common Name</label>
    <nameField>
        <displayFormat>ITCN-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action View Template Common Names</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>